# OpenSymphony

./: .gitignore  .pr-body.md  AGENTS.md  Cargo.toml  README.md  WORKFLOW.example.md  WORKFLOW.md
.agents/skills/: custom-codereview-guide.md
.agents/skills/commit/: SKILL.md
.agents/skills/convert-tasks-to-linear/: SKILL.md
.github/workflows/: ai-pr-review.yml  ci.yml
crates/opensymphony-cli/: Cargo.toml
crates/opensymphony-cli/src/: debug_session.rs  lib.rs  main.rs  orchestrator_run.rs
crates/opensymphony-cli/src/orchestrator_run/: backends.rs  config.rs  mod.rs  snapshot.rs
crates/opensymphony-cli/tests/: debug.rs  doctor.rs  help.rs  linear_mcp.rs  run.rs  tui.rs
crates/opensymphony-control/: Cargo.toml
crates/opensymphony-control/src/: lib.rs
crates/opensymphony-control/tests/: control_plane.rs
crates/opensymphony-domain/: Cargo.toml
crates/opensymphony-domain/src/: control_plane.rs  identifiers.rs  issue.rs  lib.rs  runtime.rs  snapshot.rs  state_machine.rs  time.rs  tracker.rs
crates/opensymphony-domain/tests/: snapshot_serialization.rs
crates/opensymphony-linear/: Cargo.toml
crates/opensymphony-linear-mcp/: Cargo.toml
crates/opensymphony-linear-mcp/src/: client.rs  error.rs  lib.rs  model.rs  server.rs
crates/opensymphony-linear/src/: client.rs  error.rs  graphql.rs  lib.rs  normalize.rs
crates/opensymphony-linear/tests/: linear_client.rs
crates/opensymphony-linear/tests/fixtures/: candidate_issues_page.json  candidate_issues_with_label_paging.json  candidate_issues_with_relation_paging.json  issue_inverse_relations_page_2.json  issue_labels_page_2.json  issue_states_missing_id.json  issue_states_page.json  issues_page_1.json  issues_page_2.json
crates/opensymphony-openhands/: Cargo.toml
crates/opensymphony-openhands/src/: cache.rs  client.rs  config.rs  error.rs  events.rs  lib.rs  models.rs  session.rs  stream.rs  supervisor.rs  tooling.rs  wire.rs
crates/opensymphony-openhands/tests/: client_resilience.rs  fake_server_contract.rs  issue_session_runner.rs  live_local_smoke.rs  live_local_suite.rs  live_pinned_server.rs  supervisor.rs  transport_config.rs
crates/opensymphony-orchestrator/: Cargo.toml
crates/opensymphony-orchestrator/src/: lib.rs  scheduler.rs  selection.rs
crates/opensymphony-orchestrator/tests/: hierarchy_selection.rs  scheduler.rs
crates/opensymphony-testkit/: Cargo.toml
crates/opensymphony-testkit/src/: fake_openhands.rs  lib.rs
crates/opensymphony-tui/: Cargo.toml
crates/opensymphony-tui/src/: lib.rs
crates/opensymphony-tui/tests/: reducer.rs
crates/opensymphony-workflow/: Cargo.toml
crates/opensymphony-workflow/src/: error.rs  lib.rs  loader.rs  model.rs  resolve.rs  template.rs
crates/opensymphony-workspace/: Cargo.toml
crates/opensymphony-workspace/src/: error.rs  lib.rs  manager.rs  models.rs  paths.rs
crates/opensymphony-workspace/tests/: workspace_manager.rs
docs/: DEVELOPMENT.md  ai-pr-review-human-setup.md  ai-pr-review-system-spec.md  architecture.md  deployment-modes.md  elixir-hierarchy-changes.md  implementation-plan.md  linear-and-tools.md  openhands-agent-server.md  repository-layout.md  sources.md  symphony-spec-alignment.md  testing-and-operations.md  ui-frankentui.md  websocket-runtime.md  workspace-and-lifecycle.md
docs/tasks/: README.md  osym-100-foundation-and-contracts.md  osym-101-bootstrap-workspace-and-crate-boundaries.md  osym-102-workflow-loader-and-typed-config.md  osym-103-domain-model-and-orchestrator-state-machine.md  osym-200-openhands-runtime-adapter.md  osym-201-local-agent-server-supervisor.md  osym-202-rest-client-and-conversation-contract.md  osym-203-websocket-event-stream-reconciliation-and-recovery.md  osym-204-issue-session-runner.md  osym-300-tracker-workspaces-and-orchestration.md  osym-301-workspace-manager-and-lifecycle-hooks.md  osym-302-linear-read-adapter-and-issue-normalization.md  osym-303-linear-mcp-write-surface.md  osym-304-orchestrator-scheduler-retries-and-reconciliation.md  osym-305-hierarchy-aware-task-selection.md  osym-305-repository-harness-and-generated-context-artifacts.md  osym-400-observability-and-frankentui.md  osym-401-control-plane-api-and-snapshot-store.md  osym-402-frankentui-operator-client.md  osym-500-validation-and-local-operations.md  osym-501-fake-openhands-server-and-protocol-contract-suite.md  osym-502-live-local-end-to-end-suite.md  osym-503-cli-packaging-doctor-and-local-operations-docs.md  osym-600-hosted-deployment-follow-on.md  osym-601-remote-agent-server-mode-and-auth-hardening.md  osym-602-hosted-topology-and-rollout-guidance.md
examples/: README.md
examples/configs/: local-dev.with-live-openhands.yaml  local-dev.yaml
examples/target-repo/: .gitignore  AGENTS.md  README.md  WORKFLOW.md  config.yaml
examples/target-repo/.agents/skills/inspect-opensymphony-artifacts/: SKILL.md
scripts/: README.md  live_e2e.sh  smoke_local.sh
tools/openhands-server/: README.md  install.sh  pyproject.toml  run-local.sh  version.txt
tools/openhands-server/workspace/conversations/11111111111111111111111111111111/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/13954ada04ef4fb4a6542763096b9b6a/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/15680270fb31454c9837d525dc4cfe75/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/22222222222222222222222222222222/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/33333333333333333333333333333333/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/4df38b03d2bb439ca1dea4faf3fc0352/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/8a2c932f5d17405cb43521c49db27a6c/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/955463e1897c451f89bbb8d3e7cb8164/: base_state.json  meta.json
tools/openhands-server/workspace/conversations/ad2cb54ba17d49ca9f052318cbab5556/: base_state.json  meta.json
