[workspace]
members = [
    "crates/opensymphony-domain",
    "crates/opensymphony-workflow",
    "crates/opensymphony-workspace",
    "crates/opensymphony-linear",
    "crates/opensymphony-linear-mcp",
    "crates/opensymphony-openhands",
    "crates/opensymphony-orchestrator",
    "crates/opensymphony-control",
    "crates/opensymphony-cli",
    "crates/opensymphony-tui",
    "crates/opensymphony-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/kumanday/OpenSymphony"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
manual_assert = "warn"
todo = "warn"
unnecessary_wraps = "warn"
unwrap_used = "warn"
