[package]
name = "opensymphony-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "opensymphony"
path = "src/main.rs"

[dependencies]
clap.workspace = true
opensymphony-linear-mcp = { path = "../opensymphony-linear-mcp" }
opensymphony-openhands = { path = "../opensymphony-openhands" }
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
opensymphony-testkit = { path = "../opensymphony-testkit" }
serde_json.workspace = true
tempfile.workspace = true
