[package]
name = "opensymphony-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "opensymphony"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
opensymphony-linear = { path = "../opensymphony-linear" }
opensymphony-linear-mcp = { path = "../opensymphony-linear-mcp" }
opensymphony-control = { path = "../opensymphony-control" }
opensymphony-domain = { path = "../opensymphony-domain" }
opensymphony-openhands = { path = "../opensymphony-openhands" }
opensymphony-orchestrator = { path = "../opensymphony-orchestrator" }
opensymphony-workflow = { path = "../opensymphony-workflow" }
opensymphony-tui = { path = "../opensymphony-tui" }
opensymphony-workspace = { path = "../opensymphony-workspace" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
opensymphony-testkit = { path = "../opensymphony-testkit" }
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
