[package]
name = "opensymphony-control"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
opensymphony-domain = { path = "../opensymphony-domain" }
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
