[package]
name = "opensymphony-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
