[package]
name = "opensymphony-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
