[package]
name = "opensymphony-linear-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opensymphony-domain = { path = "../opensymphony-domain" }
opensymphony-linear = { path = "../opensymphony-linear" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
opensymphony-testkit = { path = "../opensymphony-testkit" }
