[package]
name = "opensymphony-linear"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
opensymphony-domain = { path = "../opensymphony-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
