[package]
name = "opensymphony-linear"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
opensymphony-domain = { path = "../opensymphony-domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"
