[package]
name = "opensymphony-openhands"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
