[package]
name = "opensymphony-openhands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
futures-util.workspace = true
opensymphony-domain = { path = "../opensymphony-domain" }
opensymphony-workflow = { path = "../opensymphony-workflow" }
opensymphony-workspace = { path = "../opensymphony-workspace" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml = "0.8"
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
opensymphony-testkit = { path = "../opensymphony-testkit" }
tempfile.workspace = true
tokio.workspace = true
