[package]
name = "opensymphony-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
opensymphony-domain = { path = "../opensymphony-domain" }
opensymphony-workflow = { path = "../opensymphony-workflow" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
chrono = { workspace = true }
opensymphony-linear = { path = "../opensymphony-linear" }
serde_json = { workspace = true }
tokio = { workspace = true }
