[package]
name = "opensymphony-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
opensymphony-domain.workspace = true
opensymphony-orchestrator.workspace = true
opensymphony-workflow.workspace = true
