[package]
name = "opensymphony-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
ftui.workspace = true
opensymphony-control = { path = "../opensymphony-control" }
opensymphony-domain = { path = "../opensymphony-domain" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
