[package]
name = "opensymphony-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minijinja.workspace = true
opensymphony-domain = { path = "../opensymphony-domain" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
