[package]
name = "opensymphony-workflow"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
liquid = "0.26"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
time = "=0.3.36"
thiserror = "2"

[lints]
workspace = true
