[package]
name = "opensymphony-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
opensymphony-domain = { path = "../opensymphony-domain" }
opensymphony-openhands = { path = "../opensymphony-openhands" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
