[project]
name = "opensymphony-openhands-server"
version = "0.1.0"
description = "Pinned local OpenHands agent-server environment for OpenSymphony"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
agent-server = [
  "openhands-agent-server==1.14.0",
  "openhands-sdk==1.14.0",
  "openhands-tools==1.14.0",
  "openhands-workspace==1.14.0",
]

[tool.uv]
package = false

[tool.opensymphony.openhands_server]
module = "openhands.agent_server"
runtime_env = "RUNTIME"
runtime = "process"
host = "127.0.0.1"
default_port = 8000
port_env = "OPENHANDS_SERVER_PORT"
launcher = "RUNTIME=process uv run --directory . --locked --extra agent-server --module openhands.agent_server --host 127.0.0.1 --port 8000"
